tests/arch/mips/error/compiler/test_mips_error_compiler_021.s

#
# Creator (https://creatorsim.github.io/creator/)
#


.data
 	example:	.byte 	23
    example2:	.half	2
    string:		.asciiz "hello"
    
.text
main:
	li $t0, 578

